--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
             <h2>Ao Vivo</h2>
             <audio controls>
                 <source src="http://200.238.189.3:8000/matias" type="audio/aac">
+                <source src="http://200.238.189.3:8000/matias" type="audio/mpeg">
+
 
                 Seu navegador não suporta o elemento de áudio.
             </audio>
